<resources>
    <string name="version_title">版本号</string>
    <string name="app_name">悉心康健</string>
    <string name="app_name_run">悉心康健正在运行中</string>
    <string name="app_xixin1">健康生活<font color='#F0607B'>悉心</font>呵护</string>
    <string name="app_xixin2">随时随地随心测</string>
    <string name="app_load">加载中(%ss)</string>
    <string name="app_btn_text">请选择使用地区</string>
    <string name="app_switch_county">切换地区</string>
    <string name="action_settings">操作</string>
    <string name="title_ecg">实时心电图</string>
    <string name="title_main_mydev">我的设备</string>
    <string name="title_ecg_bpmcount">心博总数</string>
    <string name="title_menu_adddev">添加设备</string>
    <string name="title_product_num">产品设备号</string>
    <string name="title_hint">请选择</string>
    <string name="title_main_all_select">全选</string>
    <string name="login_hint_iphone">手机号码</string>
    <string name="login_hint_sms_verify">短信验证码</string>
    <string name="login_hint_comfig_pwd">密码可由8-12位字母和数字组成</string>
    <string name="login_hint_pwd">密码</string>
    <string name="login_title_forgetpwd">找回密码</string>
    <string name="login_title_logintype">其他登入方式</string>
    <string name="title_login">登入</string>
    <string name="activity_title_login">账号登入</string>
    <string name="activity_title_usercentre">个人中心</string>
    <string name="default_area_code">地区</string>
    <string name="title_camera">拍照</string>
    <string name="title_album">相册</string>
    <string name="permission_title">请点击确定后,允许相关权限来运行碧沙康健软件</string>
    <string name="commit_submit">确定</string>
    <string name="commit_yes">确定</string>
    <string name="commit_del">确定删除吗?</string>
    <string name="title_del_device">删除设备</string>
    <string name="cancel_no">取消</string>
    <string name="cancel_cancel">取消</string>
    <string name="setting">设置</string>
    <string name="opensetting">去开启</string>
    <string name="permission_setting">在设置-应用-权限中开始对应的权限，以保证功能的正常使用</string>
    <string name="open_permission">权限申请</string>
    <string name="ble_close_title">蓝牙连接已断开</string>
    <string name="app_exit_tip">请选择操作</string>
    <string name="ble_connint">连接中....</string>
    <string name="pls_wait">请等待....</string>
    <string name="network_error">网络连接失败,请确保网络通畅</string>
    <string name="server_error">网络异常,请重新尝试</string>
    <string name="contact_error">联系人只能添加三个</string>
    <string name="title_my_device">我的设备</string>
    <string name="title_error_deldeivce">设备已连接,请先退出</string>
    <string name="title_all_device">已添加%s个设备</string>
    <string name="title_tip_send_status">[%s]</string>
    <string name="title_error">系统异常</string>
    <string name="title_sys_not_support">您的系统不支持蓝牙4.0操作,请更换手机.</string>
    <string name="title_error_try">系统异常,请再次尝试</string>
    <string name="title_error_flush">系统文件损坏,请重新打开软件</string>
    <string name="title_tip_deufalt">紧急短信状态栏</string>
    <string name="title_ble_conn">已连接</string>
    <string name="title_ble_unconn">未连接</string>
    <string name="title_exit">退出</string>
    <string name="camera_add_title">添加方式</string>
    <string name="camera_add">添加我的摄像头(推荐)</string>
    <string name="camera_add_tips">如果设备曾经添加过路由器，请将设备恢复出厂设置。</string>
    <string name="camera_add_share">添加分享的设备</string>
    <string name="camera_add_share_tips">通过序列号添加设备。</string>
    <string name="camera_guide_title">摄像头连接引导</string>
    <string name="camera_guide_headline">悉心智能摄像头</string>
    <string name="camera_guide_body">长按摄像头底部背面重置按键，保持5秒左右，至摄像头发出语音提示“恢复出厂设置”，即重置成功。</string>
    <string name="camera_guide_tips">按图示操作后，听到“开始快速配置”提示语，点击下一步</string>
    <string name="next_step">下一步</string>
    <string name="camera_wifi_title">搜索设备</string>
    <string name="camera_wifi_headline">请输入当前路由器密码：</string>
    <string name="camera_wifi_tips">*选择较强信号的WiFi，正确填写WiFi密码，可快速让设备联网。</string>
    <string name="camera_wifi_confirm">确定</string>
    <string name="camera_wifi_problem">联网遇到问题？</string>
    <string name="camera_wifi_problem_title">以下问题可能导致设备联网失败</string>
    <string name="camera_wifi_problem_body">1、检查是否开启WiFi防蹭网（此设置可能会导致设备无法正常连网），可临时关闭，设备联网成功后再开启；\n2、如果您家是双频路由器，请检查摄像头连接的WiFi是否是 5GHz 频段的WiFi，请切换连接 2.4GHz 频段的WiFi；\n3、如果您家的WiFi是桥接的（因为桥接的原因可能会导致网络不稳定），建议连接非桥接WiFi；\n4、如果您的设备、路由器、手机，距离过远，或者中间有墙壁等障碍物，建议尽可能靠近。</string>
    <string name="camera_wifi_problem_tips">温馨提示：选择较强信号的WiFi，可快速让设备联网</string>
    <string name="camera_wifi_pw">密码</string>
    <string name="camera_search_timer">180s</string>
    <string name="camera_search_setWifiWithQrcode">使用二维码配置设备WiFi</string>
    <string name="camera_search_retry">重试</string>
    <string name="camera_search_cancel">取消</string>
    <string name="camera_search_dialog_body">① 请将二维码朝向设备镜头；\n② 保持 20 一 30 公分的距离，等待扫描；\n③ 听到正在配置 WiFi 提示音后移开手机；\n④ 听到配置成功提示音表示设备 WiFi 配置已完成。</string>
    <string name="camera_search_dialog_iKnow">我知道了</string>
    <string name="camera_pw_title">设置摄像头密码</string>
    <string name="camera_pw_headline">为了您的设备安全，请修改默认密码</string>
    <string name="camera_pw_new_pw">请输入新密码</string>
    <string name="camera_pw_confirm_pw">请确认新密码</string>
    <string name="camera_pw_tips">⊙如果密码设置不成功，请长按设备后方的reset键，进行恢复出厂默认。恢复出厂默认后，需要重新添加设备，重新设置密码</string>
    <string name="camera_pw_confirm">确定</string>
    <string name="camera_pw_backPress_tips">设备未保存，如果退出将重新添加设备！ 双击退出</string>
    <string name="camera_name_title">摄像头取名</string>
    <string name="camera_name_headline">添加设备成功，给设备起个名吧</string>
    <string name="camera_name_hint">最多10个字符</string>
    <string name="camera_name_save">保存</string>
    <string name="camera_addFromSn_title">添加设备</string>
    <string name="camera_addFromeSn_hint">请输入设备序列号</string>
    <string name="camera_addFromeSn_add">添加</string>
    <string name="camera_addFromeSn_scanTips">点击扫描设备二维码</string>
    <string name="camera_scan_qrcode_title">扫描设备二维码</string>
    <string name="camera_scan_qrcode_failed_open_camera">不能打开摄像头！</string>
    <string name="camera_all_title">全部摄像头</string>
    <string name="camera_share">分享</string>
    <string name="camera_settings">设置</string>
    <string name="camera_share_content_title">【碧沙康健】请点击下方链接按照提示获取分享的摄像头。</string>
    <string name="camera_settings_title">摄像头设置</string>
    <string name="camera_settings_basic">基本设置</string>
    <string name="camera_settings_basic_devName">设备名称</string>
    <string name="camera_settings_basic_upDown">图像上下翻转</string>
    <string name="camera_settings_basic_leftRight">图像左右翻转</string>
    <string name="camera_settings_basic_rename">修改设备名称</string>
    <string name="camera_settings_basic_timeOSD">时间水印</string>
    <string name="camera_settings_basic_OSD">自定义水印</string>
    <string name="camera_settings_basic_OSD_tips">该功能将设备名称添加到视频图像中，可以丰富视频图像的信息</string>
    <string name="camera_settings_basic_confirm">确定</string>
    <string name="camera_settings_basic_cancel">取消</string>
    <string name="camera_settings_basic_reverseMovement">反向移动</string>
    <string name="camera_settings_basic_saveNativePw">保存密码</string>
    <string name="camera_settings_basic_saveNativePw_tips">选择保存密码，而不用每次都输入密码</string>
    <string name="camera_settings_pwMng">密码管理</string>
    <string name="camera_settings_pwMng_oldPw">旧密码</string>
    <string name="camera_settings_pwMng_newPw">新密码</string>
    <string name="camera_settings_pwMng_confirmPw">确认密码</string>
    <string name="camera_settings_pwMng_confirmMod">确认修改</string>
    <string name="camera_settings_pwMng_modSuccess">修改成功</string>
    <string name="camera_settings_alarm">报警设置</string>
    <string name="camera_settings_alarm_open">开启报警</string>
    <string name="camera_settings_alarm_tips">检测到画面变化时报警</string>
    <string name="camera_settings_alarm_mode">报警方式</string>
    <string-array name="camera_settings_alarm_modes">
        <item>拍照</item>
        <item>录像</item>
        <item>响铃</item>
    </string-array>
    <string name="camera_settings_alarm_sensitivity">灵敏度</string>
    <string-array name="camera_settings_alarm_sensitivities">
        <item>低</item>
        <item>中</item>
        <item>高</item>
    </string-array>
    <string name="camera_settings_storage">储存管理</string>
    <string name="camera_settings_storage_capacity">存储容量:</string>
    <string name="camera_settings_storage_remaining_capacity">剩余容量:</string>
    <string name="camera_settings_storage_full">录像满时:</string>
    <string name="camera_settings_storage_stop_record">停止录像</string>
    <string name="camera_settings_storage_cycle">循环录像</string>
    <string name="camera_settings_storage_formatting">格式化</string>
    <string name="camera_settings_storage_formatting_tips">该操作将删除储存卡上的所有文件，是否格式化？</string>
    <string name="camera_settings_advance">高级设置</string>
    <string name="camera_settings_advance_record_set">录像设置</string>
    <string name="camera_settings_advance_record_audioEnable">录像音频</string>
    <string name="camera_settings_advance_record_audioEnable_tips">如果关闭，则录下来的文件没有音频</string>
    <string name="camera_settings_advance_recordMode">录像模式</string>
    <string name="camera_settings_advance_recordMode_tips">如果选择联动录像，那意味着设备平时是不录像的，当开启报警后有报警产生才开始录像</string>
    <string-array name="camera_settings_advance_recordModes">
        <item>联动录像</item>
        <item>从不录像</item>
        <item>始终录像</item>
    </string-array>
    <string name="camera_settings_advance_other_set">其他设置</string>
    <string name="camera_settings_advance_other_quality">画质</string>
    <string-array name="camera_settings_advance_qualities">
        <item>最好</item>
        <item>很好</item>
        <item>好</item>
        <item>一般</item>
        <item>较差</item>
        <item>很差</item>
    </string-array>
    <string name="camera_settings_common">通用</string>
    <string name="camera_settings_common_sn">序列号</string>
    <string name="camera_settings_common_devVer">设备版本</string>
    <string name="camera_settings_common_swVer">软件版本</string>
    <string name="camera_settings_common_pubDate">发布日期</string>
    <string name="camera_settings_common_devTime">设备时间</string>
    <string name="camera_settings_common_syncDevTime">同步时间</string>
    <string name="camera_settings_common_netModel">网络模式</string>
    <string name="camera_net_connect_type_p2p">P2P</string>
    <string name="camera_net_connect_type_transmit">转发模式</string>
    <string name="camera_net_connect_type_ip">IP直连</string>
    <string name="camera_net_connect_type_rps">RPS</string>
    <string name="camera_net_connect_type_unknown">未知类型</string>
    <string name="camera_settings_common_devUpdate">设备升级</string>
    <string name="camera_settings_common_clickToUpdate">点击更新设备</string>
    <string name="camera_devcheckupdate_failed">获取设备硬件版本失败！</string>
    <string name="camera_devcheckupdate_versionlast">已是最新版本</string>
    <string name="camera_devcheckupdate_clickupdate">点击更新</string>
    <string name="camera_deviceupdate">设备硬件升级</string>
    <string name="camera_settings_common_factoryReset">恢复出厂设置</string>
    <string name="camera_settings_factoryReset_success">恢复出厂设置成功，重启中&#8230;</string>
    <string name="camera_settings_common_reboot">设备重启</string>
    <string name="camera_settings_common_rebooting">重启中&#8230;</string>
    <string name="device_opt_play">播放</string>
    <string name="device_opt_stop">停止</string>
    <string name="device_opt_capture">截图</string>
    <string name="device_opt_record">录制</string>
    <string name="device_opt_fullscreen">全屏</string>
    <string name="camera_select_definition">请选择视频清晰度</string>
    <string name="camera_sd">标清</string>
    <string name="camera_hd">高清</string>
    <string name="title_pair_device">开始匹配</string>
    <string name="title_pair_device_commit">确定添加设备</string>
    <string name="title_search_tip">请在手机附近打开设备进行匹配</string>
    <string name="tip_restart_code">\u3000\u3000重新获取</string>
    <string name="tip_input_code">请输入验证码</string>
    <string name="title_forgetpwd_auth">账号安全验证</string>
    <string name="title_getpwd_iphone">请使用安全手机%s获取验证码</string>
    <string name="tip_click_find_device">点击开始匹配搜索附近的设备</string>
    <string name="tip_vail_type">验证方式</string>
    <string name="tip_bind_vail_1">为了保护账户安全,需要验证其有效性</string>
</resources>