<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_camera_wifi"
    tools:context=".camera.CameraWifiActivity">

    <com.bisa.health.cust.view.ActionBarView
        android:id="@+id/abar_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:isPre="true"
        app:preIco="@drawable/menu_back_bg"
        app:title="@string/camera_wifi_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:text="@string/camera_wifi_headline"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_camera_wifi_ssid"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:drawableStart="@drawable/camera_wifi"
            android:drawablePadding="10dp"
            android:paddingStart="10dp"
            android:editable="false" />

        <EditText
            android:id="@+id/et_camera_wifi_pw"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:drawableStart="@drawable/camera_pw"
            android:drawablePadding="10dp"
            android:paddingStart="10dp"
            android:hint="@string/camera_wifi_pw"
            android:singleLine="true" />

        <TextView
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/camera_wifi_tips"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_camera_wifi_confirm"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:background="@android:color/holo_green_dark"
            android:text="@string/camera_wifi_confirm"
            android:textColor="@color/white" />
    </LinearLayout>



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:background="@android:drawable/list_selector_background"
        android:text="@string/camera_wifi_problem" />

</LinearLayout>