<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".camera.CameraPwActivity">

    <com.bisa.health.cust.view.ActionBarView
        android:id="@+id/abar_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        app:isPre="true"
        app:preIco="@drawable/menu_back_bg"
        app:title="@string/camera_pw_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <TextView
            android:layout_width="@dimen/camera_btn_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/camera_pw_headline"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_camera_pw_sn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            tools:text="SN:" />

        <EditText
            android:id="@+id/et_camera_pw_new_pw"
            android:layout_width="@dimen/camera_btn_width"
            android:layout_height="@dimen/camera_btn_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:drawableStart="@drawable/camera_pw_set"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:hint="@string/camera_pw_new_pw"
            android:singleLine="true" />

        <EditText
            android:id="@+id/et_camera_pw_confirm_pw"
            android:layout_width="@dimen/camera_btn_width"
            android:layout_height="@dimen/camera_btn_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:drawableStart="@drawable/camera_pw_set"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:hint="@string/camera_pw_confirm_pw"
            android:singleLine="true" />

        <TextView
            android:layout_width="@dimen/camera_btn_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/camera_pw_tips"/>

        <Button
            android:id="@+id/btn_camera_pw_confirm"
            android:layout_width="@dimen/camera_btn_width"
            android:layout_height="@dimen/camera_btn_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:background="@color/color_btn_default"
            android:text="@string/camera_pw_confirm"
            android:textColor="@color/white"
            android:gravity="center"/>
    </LinearLayout>

</RelativeLayout>