<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_camera_add"
    tools:context=".camera.CameraAddActivity">

    <com.bisa.health.cust.view.ActionBarView
        android:id="@+id/abar_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        app:isPre="true"
        app:preIco="@drawable/menu_back_bg"
        app:title="@string/camera_add_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">
        <Button
            android:id="@+id/btn_camera_add"
            android:layout_width="@dimen/camera_btn_width"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/camera_btn_height"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/bg_shape_camera_add_btn"
            android:drawableStart="@drawable/camera_scan"
            android:gravity="center"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/camera_add"
            android:textColor="@color/color_btn_default" />

        <TextView
            android:layout_width="@dimen/camera_btn_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/camera_add_tips"/>

        <Button
            android:id="@+id/btn_camera_add_from_share"
            android:layout_width="@dimen/camera_btn_width"
            android:layout_height="@dimen/camera_btn_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp"
            android:background="@drawable/bg_shape_camera_add_btn"
            android:drawableStart="@drawable/camera_add_keyboard"
            android:gravity="center"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/camera_add_share" />

        <TextView
            android:layout_width="@dimen/camera_btn_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/camera_add_share_tips"/>

    </LinearLayout>

</RelativeLayout>