<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.bisa.health.BindAccessVailActivity">

    <com.bisa.health.cust.view.ActionBarView
        app:isPre="true"
        app:preIco="@drawable/menu_back_bg"
        app:title="@string/tip_vail_type"
        android:id="@+id/abar_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/ll_titlemain"
        android:layout_width="309dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:padding="2dp"
        android:layout_below="@+id/abar_title"
        android:layout_alignStart="@+id/ll_iphone">

        <TextView
            android:id="@+id/tv_title"
            android:textSize="16dp"
            android:text="@string/title_forgetpwd_auth"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:textColor="@color/color_login_tip"
            android:id="@+id/tv_tip_1"
            tools:text="@string/tip_bind_vail_1"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/tip_bind_vail_1"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:textColor="@color/color_get_pwd"
            android:id="@+id/tv_tip_2"
            android:layout_below="@+id/tv_tip_1"
            tools:text="@string/title_getpwd_iphone"
            android:textSize="14sp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>




    <LinearLayout
        android:layout_below="@+id/ll_titlemain"
        android:id="@+id/ll_iphone"
        android:layout_width="309dp"
        android:layout_height="41dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:background="@drawable/shape_login"
        android:orientation="horizontal"
        android:padding="2dp">


        <!-- 18682268551-->
        <EditText
            android:id="@+id/tv_code"
            android:layout_width="190dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="17dp"
            android:background="#fff"
            android:gravity="fill"
            android:hint="@string/tip_input_code"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="20"
            android:paddingLeft="20dp"
            android:nextFocusForward="@+id/btn_login"
            android:text=""
            android:textSize="16sp">

        </EditText>

        <LinearLayout
            android:id="@+id/bt_dropdown"
            android:layout_width="94dp"
            android:layout_height="match_parent"
            android:gravity="center">
            <Button
                android:id="@+id/imgbtn_smsSend"
                android:layout_width="94dp"
                android:layout_height="27dp"
                android:background="@drawable/sms_enabled"
                android:gravity="center"
                android:text="@string/tip_restart_code"
                android:textColor="@color/black"
                android:textSize="10sp" />
        </LinearLayout>
    </LinearLayout>


    <Button
        android:id="@+id/btn_login"
        android:layout_width="309dp"
        android:layout_height="40dp"
        android:layout_below="@+id/ll_iphone"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:background="@drawable/login_btn"
        android:text="@string/commit_submit"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_error_tip"
        android:layout_below="@+id/btn_login"
        tools:text="无法验证请联系客服申诉"
        android:textSize="14dp"
        android:layout_marginTop="14dp"
        android:textColor="@color/report_all"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</RelativeLayout>