<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/camera_select_definition"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/color_default_bg" />

    <Button
        android:id="@+id/btn_camera_hd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/list_selector_background"
        android:text="@string/camera_hd"
        android:textColor="@color/blue"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/color_default_bg" />

    <Button
        android:id="@+id/btn_camera_sd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/list_selector_background"
        android:text="@string/camera_sd"
        android:textColor="@color/blue"
        android:textSize="16sp" />


</LinearLayout>
